--- a/app/components/partials/navigation.ejs
+++ b/app/components/partials/navigation.ejs
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="/login"><i class="fas fa-address-book"></i> Login</a>
                 </li>                
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> Disabled</a>
+                    <a class="nav-link disabled" href="#" tabIndex="-1" aria-disabled="true"> Disabled</a>
                 </li>
             </ul>
         </div>
