--- a/app/views/partials/navigation.ejs
+++ b/app/views/partials/navigation.ejs
@@ -42,10 +42,10 @@
                     </div>                    
                 </li>                          
                 <li class="nav-item">
-                    <a class="nav-link" href="/login"><i class="fas fa-address-book"></i> Login</a>
+                    <a class="nav-link" href="/autentication/signin"><i class="fas fa-address-book"></i> Login</a>
                 </li>                
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> Disabled</a>
+                    <a class="nav-link disabled" href="#" tabIndex="-1" aria-disabled="true"> Disabled</a>
                 </li>
             </ul>
         </div>
