--- a/app/components/User/users/style.scss
+++ b/app/components/User/users/style.scss
@@ -1,6 +1,9 @@
-.players {
+.users {
     background: #6b6b6b;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #6b6b6b, #6b6b6b);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #6b6b6b, #6b6b6b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
+  }
+  .itemuser{
+    margin-right: 40px;
   }
