--- a/app/views/partials/navigation.ejs
+++ b/app/views/partials/navigation.ejs
@@ -15,8 +15,8 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-address-book"></i> Player</a>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="/players/new">New</a>
-                      <a class="dropdown-item" href="/players">Find</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                      <!-- <a class="dropdown-item" href="/players">Find</a> -->
+                      <!-- <a class="dropdown-item" href="#">Something else here</a> -->
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="/players">All Players</a>
                     </div>                    
@@ -25,8 +25,8 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-address-book"></i> User</a>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="/users/new">New</a>
-                      <a class="dropdown-item" href="/users">Find</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                      <!-- <a class="dropdown-item" href="/users">Find</a> -->
+                      <!-- <a class="dropdown-item" href="#">Something else here</a> -->
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="/users">All Users</a>
                     </div>                    
@@ -42,7 +42,7 @@
                     </div>                    
                 </li>                          
                 <li class="nav-item">
-                    <a class="nav-link" href="/autentication/signin"><i class="fas fa-address-book"></i> Login</a>
+                    <a class="nav-link" href="/users/signin"><i class="fas fa-address-book"></i> Login</a>
                 </li>                
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabIndex="-1" aria-disabled="true"> Disabled</a>
