--- a/app/views/partials/navigation.ejs
+++ b/app/views/partials/navigation.ejs
@@ -42,11 +42,8 @@
                     </div>                    
                 </li>                          
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/signin"><i class="fas fa-address-book"></i> Login</a>
+                    <a class="nav-link" href="/users/signin"><i class="fas fa-address-book"></i> Logout</a>
                 </li>                
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabIndex="-1" aria-disabled="true"> Disabled</a>
-                </li>
             </ul>
         </div>
     </div>
